data/diff_tests/v8/nop_IncorrectBranchTargetResolution_76.wast
;; 7. **Br Table Instruction with `nop`:**    - **Description**: Use a `br_table` instruction with multiple branches and include `nop` in various positions before `br_table`. Ensure the correct target is chosen.    - **Constraint Checked**: Checks `br_table` handling with `nop` in the instruction sequence.    - **Relation to Incorrect Branch Target Resolution**: Validates label indexing in `br_table` is correct when `nop` instructions are involved.

(assert_invalid
  (module
    (func (block $label (nop) (br_table $label $label 0 (nop)))))
  "unexpected end of section or function")